fixed video position on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -606,10 +606,6 @@ video {
   left: 0px;
 }
 
-.left-\[23vw\] {
-  left: 23vw;
-}
-
 .right-0 {
   right: 0px;
 }
@@ -628,10 +624,6 @@ video {
 
 .z-50 {
   z-index: 50;
-}
-
-.z-20 {
-  z-index: 20;
 }
 
 .col-span-1 {
@@ -906,10 +898,6 @@ video {
 
 .w-\[200px\] {
   width: 200px;
-}
-
-.w-\[40vw\] {
-  width: 40vw;
 }
 
 .w-\[60rem\] {
@@ -1328,11 +1316,6 @@ video {
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
-}
-
-.object-scale-down {
-  -o-object-fit: scale-down;
-     object-fit: scale-down;
 }
 
 .p-1 {
@@ -2019,10 +2002,6 @@ video {
 }
 
 @media (min-width: 480px) {
-  .sm\:left-\[35\%\] {
-    left: 35%;
-  }
-
   .sm\:col-span-2 {
     grid-column: span 2 / span 2;
   }
@@ -2209,10 +2188,6 @@ video {
 @media (min-width: 976px) {
   .lg\:left-10 {
     left: 2.5rem;
-  }
-
-  .lg\:left-\[35\%\] {
-    left: 35%;
   }
 
   .lg\:order-2 {
